# course-PY_BASIC_202211-homeworks

./: .gitignore  README.md  _run_local_tests.bat
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  README.md  _docker-help-built-run.bat  _only-uvicorn_start.bat  pyproject.toml
homework_03/ping_app/: main.py
homework_03/ping_app/views/: ping.py
