[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["arhangelist <arhanim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
